apps/base/its-mytabs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: its-mytabs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: its-mytabs

  template:
    metadata:
      labels:
        app: its-mytabs
        try: "0"
        policy-type: "app"

    spec:
      containers:
        - name: its-mytabs
          image: louislam/its-mytabs:1.6.2

          securityContext:
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 47777
              protocol: TCP

          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"

      restartPolicy: Always
